rename: calculator to minesweeper-gu

--- a/Minesweeper-gu.ioc
+++ b/Minesweeper-gu.ioc
@@ -1168,8 +1168,8 @@ ProjectManager.MainLocation=Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=Calculator.ioc
-ProjectManager.ProjectName=Calculator
+ProjectManager.ProjectFileName=Minesweeper-gu.ioc
+ProjectManager.ProjectName=Minesweeper-gu
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
